# RawBufferProject

./: .editorconfig  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml  sonar-project.properties
.github/workflows/: cmake-multi-platform.yml  sonar_lint.yml
RawBufferHeaderOnly/: CMakeLists.txt  RawBuffer.h
RawBufferStaticLibrary/: CMakeLists.txt  RawBuffer.cpp  RawBuffer.h
RawBufferTests/: BufferTests.cpp  CMakeLists.txt
RawBufferTests/include/: random.hpp
RawBufferUser/: CMakeLists.txt  RawBufferUser.cpp  RawBufferUser.h
cmake/: CompilerWarnings.cmake  IdentifyToolsetOnPlatform.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
